Add Chakra UI and Emotion dependencies; update Next.js config and TypeScript settings

--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -6,6 +6,12 @@
   --grid-gap-x: #{rem(24px)};
 
   --white: #ffffff;
-  --dark: #000000;
   --blue: #0000ff;
+
+  --primary-color: #c8ee44;
+  --secondary-color: #29a073;
+  --primary-text-color: #1b212d;
+  --secondary-text-color: #929eae;
+  --gray: #fafafa;
+  --dark: #1e1c30;
 }
