Remove unused Home component and refactor Container, Heading, Label, and Paragraph components to use Chakra UI's Text component; update styles and enums for typography consistency.

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,4 +1,4 @@
-@use 'tool' as *;
+@use "tool" as *;
 
 * {
   margin: 0;
@@ -141,7 +141,7 @@ video::-webkit-media-controls {
   display: none;
 }
 
-img:is([loading='lazy']) {
+img:is([loading="lazy"]) {
   background-repeat: no-repeat;
   background-size: cover;
 }
