--- a/src/components/GridDebug/styles.module.scss
+++ b/src/components/GridDebug/styles.module.scss
@@ -10,6 +10,24 @@ $color-debug: #ff6b4c;
   transform: translate(-50%, 0);
   z-index: 99999999999;
 
+  .grid_container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
+
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(8, 1fr);
+    }
+
+    @media (min-width: 1200px) {
+      grid-template-columns: repeat(12, 1fr);
+    }
+  }
+
+  .grid_column {
+    grid-column: span 1;
+  }
+
   .grid_col {
     background-color: rgba($color-debug, 0.3);
     height: 100vh;
@@ -17,7 +35,7 @@ $color-debug: #ff6b4c;
 
     &::before {
       background-color: rgba($color-debug, 0.3);
-      content: '';
+      content: "";
       height: 100%;
       left: 0;
       position: absolute;
@@ -26,7 +44,7 @@ $color-debug: #ff6b4c;
 
     &::after {
       background-color: rgba($color-debug, 0.3);
-      content: '';
+      content: "";
       height: 100%;
       right: 0;
       position: absolute;
