--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,4 @@
-@use 'reset' as *;
-@use 'var' as *;
-@use 'global' as *;
-@use 'text' as *;
-
-@use 'tailwindcss' as *;
+@use "reset" as *;
+@use "var" as *;
+@use "global" as *;
+@use "text" as *;
