Refactor GridContainer to use Chakra UI's Box component for grid layout; update GridDebug styles for visibility control; add primaryTextColor to TypoColor enum; adjust HomePage heading color; clean up unused styles in HomePage; define primary-text-color in CSS variables.

--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -23,7 +23,7 @@
   :root {
     --main-background: #1e1c30;
 
-    --primary-color: #00bfff;
+    --primary-text-color: #fff;
     --black: #1a1a1a;
     --white: #f0f0f0;
   }
