--- a/src/modules/HomePage/styles.module.scss
+++ b/src/modules/HomePage/styles.module.scss
@@ -1,16 +1,4 @@
 .wrapper {
-  h1 {
-    font-size: 2rem;
-  }
-}
-
-.wrapper_inner {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1rem;
-}
-
-.wrapper_inner_image {
-  width: 100%;
-  height: 100%;
+  padding-top: rem(30px);
+  padding-bottom: rem(43px);
 }
