Enhance color mode functionality by updating ThemeProvider attribute; integrate color mode toggle in Sidebar component; adjust CSS variables for light and dark themes; refactor SCSS imports to use @use syntax for better modularity.

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -124,8 +124,7 @@ body {
   overscroll-behavior-y: none !important;
   min-height: -webkit-fill-available;
   font-family: var(--font-kumbh-sans);
-  background-color: var(--main-background);
-  color: var(--white);
+  color: var(--primary-text-color);
 
   ::-webkit-scrollbar {
     display: none;
