Refactor Sidebar layout by integrating Menu component; update routing constants with new labels and icons; enhance typography styles in SCSS; add new color variables to support dark mode; clean up unused styles and files.

--- a/src/components/Typo/Label/styles.module.scss
+++ b/src/components/Typo/Label/styles.module.scss
@@ -49,10 +49,7 @@
     }
   }
   &__14 {
-    //font-size: rem(16px);
-    line-height: 142.857%;
-    @include tablet {
-      font-size: rem(14px);
-    }
+    font-size: rem(14px);
+    line-height: normal;
   }
 }
