Enhance Heading component by adding new size option (25) and corresponding SCSS styles; update Header layout to include dynamic title generation and integrate color mode toggle; refactor Sidebar to remove color mode button; adjust HomePage to display updated heading text.

--- a/src/components/Typo/Heading/styles.module.scss
+++ b/src/components/Typo/Heading/styles.module.scss
@@ -2,6 +2,10 @@
   font-style: normal;
   line-height: 100%;
 
+  &__25 {
+    font-size: rem(25px);
+  }
+
   &__60 {
     font-size: rem(60px);
     line-height: 120%;
