Refactor IconColorMode component CSS for improved specificity; update Header layout to include User component; add new background color variables for card elements in light and dark themes.

--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -24,6 +24,7 @@ html[data-theme="light"] {
 
   --primary-text-color: #1b212d;
   --secondary-text-color: #929eae;
+  --bg-card: #fafafa;
 
   --black: #000;
   --white: #ffffff;
@@ -39,6 +40,7 @@ html[data-theme="dark"] {
 
   --primary-text-color: #fff;
   --secondary-text-color: #929eae;
+  --bg-card: #201e34;
 
   --black: #1a1a1a;
   --white: #f0f0f0;
