Enhance HomePage layout by adding Wallets component for improved financial overview; update Card component to support ClientOnly for better rendering in dark mode; refine SCSS styles for active card states to enhance visual feedback.

--- a/src/modules/HomePage/MoneyCards/Card/Card.module.scss
+++ b/src/modules/HomePage/MoneyCards/Card/Card.module.scss
@@ -6,6 +6,14 @@
   &.dark {
     --bg-card: #201e34;
     --bg-card-icon: #292642;
+    --fill-icon: #fff;
+
+    & .active {
+      --bg-card: #282541;
+      --bg-card-icon: #353255;
+      --fill-icon: var(--primary-color);
+      --balance-color: #fff;
+    }
   }
   &_inner {
     background-color: var(--bg-card);
