Add secondaryColor to TypoColor enum; update HomePage layout with new components and remove unused elements; enhance SCSS with secondary color styles

--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -31,3 +31,7 @@
 .text__secondary-text-color {
   color: var(--secondary-text-color);
 }
+
+.text__secondary-color {
+  color: var(--secondary-color);
+}
