Update HomePage Capital component to utilize new Label size option; enhance chart legend display with dynamic dataset labels and improved styling for better visual clarity.

--- a/src/components/Typo/Label/styles.module.scss
+++ b/src/components/Typo/Label/styles.module.scss
@@ -52,4 +52,9 @@
     font-size: rem(14px);
     line-height: normal;
   }
+
+  &__12 {
+    font-size: rem(12px);
+    line-height: normal;
+  }
 }
