Add headerTextTable to TypoColor enum; integrate TransactionTable component into RecentTransaction section for enhanced transaction display; update SCSS with new header text color styles.

--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -35,3 +35,7 @@
 .text__secondary-color {
   color: var(--secondary-color);
 }
+
+.text__header-text-table {
+  color: var(--header-text-table);
+}
