--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -15,6 +15,7 @@ html[data-theme="light"] {
   --bg-sidebar: #fafafa;
 
   --primary-text-color: #1b212d;
+  --header-text-table: #929eae;
 
   --bg-card: #fafafa;
   --border-color: #f5f5f5;
@@ -31,6 +32,7 @@ html[data-theme="dark"] {
   --bg-sidebar: #1e1c30;
 
   --primary-text-color: #fff;
+  --header-text-table: #78778b;
 
   --bg-card: #201e34;
   --border-color: #282541;
