Update Label component to include new size option (17) and corresponding SCSS styles; add 'div' option to TypoTagLabel enum; introduce gray color to TypoColor enum and update _var.scss for consistent theming; enhance Wallets component with MasterCard integration and update text styles for improved readability.

--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -1,12 +1,3 @@
-// Font family will init new project
-.font__geist-sans {
-  font-family: var(--font-geist-sans);
-}
-
-.font__geist-mono {
-  font-family: var(--font-geist-mono);
-}
-
 // Text color when init new project
 .text__black {
   color: var(--black);
@@ -22,6 +13,10 @@
 
 .text__blue {
   color: var(--blue);
+}
+
+.text__gray {
+  color: var(--gray);
 }
 
 .text__primary-text-color {
