Add 'use client' directive to multiple components; enhance TransactionTable with new props and detailed transaction information including invoice ID and time; update Label component to support new size option (13) and corresponding styles.

--- a/src/components/Typo/Label/styles.module.scss
+++ b/src/components/Typo/Label/styles.module.scss
@@ -61,4 +61,9 @@
     font-size: rem(12px);
     line-height: normal;
   }
+
+  &__13 {
+    font-size: rem(13px);
+    line-height: normal;
+  }
 }
