Update Heading component to include new size option (30) and corresponding SCSS styles for improved typography flexibility.

--- a/src/components/Typo/Heading/styles.module.scss
+++ b/src/components/Typo/Heading/styles.module.scss
@@ -6,6 +6,10 @@
     font-size: rem(25px);
   }
 
+  &__30 {
+    font-size: rem(30px);
+  }
+
   &__60 {
     font-size: rem(60px);
     line-height: 120%;
